--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boot16",
+  "name": "travelvue",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,8 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "element-ui": "^2.13.2",
     "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
